# autopsf

./: .isort.cfg  .pre-commit-config.yaml  README.md  setup.cfg
examples/: epsf_center_list.npy  get_psf.py  get_psf_c28.sh  get_psf_c28_config.yml  get_psf_config_template.yml  get_psf_sbig_config.yml  get_psf_sinistro_config.yml  pyzogy_test.py  run_all_examples.sh  sbig_psf_photometry.py
examples/c28_image/: UpsilonSgr-S007-Ha-R001-Ha-reduced_32bit_center_list.npy  UpsilonSgr-S007-Ha-R001-Ha-reduced_32bit_dao_tbl.npy  UpsilonSgr-S007-Ha-R001-Ha-reduced_32bit_epsf_model.npy  UpsilonSgr-S007-Ha-R001-Ha-reduced_32bit_epsf_star.npy  UpsilonSgr-S007-Ha-R001-Ha-reduced_32bit_good_stars.pbl  UpsilonSgr-S007-Ha-R001-Ha-reduced_32bit_good_stars_tbl.npy  UpsilonSgr-S007-Ha-R001-Ha-reduced_32bit_psf_model.npy
examples/mock_image/: build_mock_images.py  get_psf_with_known_fwhm_pixelscale.py
examples/sbig_image/: coj1m011-kb05-20140430-0790-e90_center_list.npy  coj1m011-kb05-20140430-0790-e90_dao_tbl.npy  coj1m011-kb05-20140430-0790-e90_epsf_model.npy  coj1m011-kb05-20140430-0790-e90_epsf_star.npy  coj1m011-kb05-20140430-0790-e90_good_stars.pbl  coj1m011-kb05-20140430-0790-e90_good_stars_tbl.npy  coj1m011-kb05-20140430-0790-e90_psf_model.npy  coj1m011-kb05-20140430-0885-e90_center_list.npy  coj1m011-kb05-20140430-0885-e90_dao_tbl.npy  coj1m011-kb05-20140430-0885-e90_epsf_model.npy  coj1m011-kb05-20140430-0885-e90_epsf_star.npy  coj1m011-kb05-20140430-0885-e90_good_stars.pbl  coj1m011-kb05-20140430-0885-e90_good_stars_tbl.npy  (+29 more)
scripts/: get_psf.py
src/autopsf/: __init__.py  (+3 more)
(+240 files in other folders)
