[metadata]
name = psf
version = 0.0.1
license = BSD-3-Clause
license_files = LICENSE
description = Build PSF from a WCS-fitted image
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md
author = Marco C Lam
author_email = lam@mail.tau.ac.il
maintainer = Marco C Lam
maintainer_email = lam@mail.tau.ac.il
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy>=1.21
    scipy>=1.8
    photutils>=1.8
    matplotlib>=3.5
    astropy>=4.3
    psfr>=0.0.1
setup_requires =
    pytest>=5.3
    pytest-cov>=2.8

[options.packages.find]
where=src